# evidently-datadrift

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/evidently/: __init__.py  _version.py  errors.py  pydantic_utils.py
src/evidently/core/: container.py  report.py  serialization.py
src/evidently/core/registries/: __init__.py  descriptors.py  metrics.py  presets.py
src/evidently/descriptors/: __init__.py  generated_descriptors.py
src/evidently/legacy/: base_metric.py
src/evidently/legacy/descriptors/: __init__.py  _registry.py
src/evidently/legacy/features/: _registry.py
src/evidently/legacy/metric_preset/: __init__.py  _registry.py
src/evidently/legacy/metrics/: __init__.py  _registry.py
src/evidently/legacy/metrics/data_drift/: target_by_features_table.py
src/evidently/legacy/metrics/data_quality/: dataset_correlations_metric.py
src/evidently/legacy/report/: report.py
src/evidently/legacy/suite/: base_suite.py
src/evidently/legacy/test_preset/: __init__.py  _registry.py
src/evidently/legacy/tests/: __init__.py  _registry.py
src/evidently/metrics/: __init__.py
src/evidently/presets/: __init__.py
test_data/: demographic_data.parquet
tests/: manual_test.ipynb  test_data_drift.py  test_import.py
