[project]
name = "evidently"
version = "0.7.15+datadrift.1"
description = "A stripped-down fork of Evidently, keeping only the data drift functionality."
authors = [
    {name = "Emeli Dral", email = "emeli.dral@gmail.com"},
]
maintainers = [
    {name = "rogerchai-hi", email = "rogerchai0627@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "plotly (>=5.10.0,<6)",
    "scikit-learn (>=1.1.1)",
    "pandas[parquet] (>=1.3.5)",
    "numpy (>=1.22.0)",
    "nltk (>=3.6.7)",
    "scipy (>=1.10.0)",
    "pyyaml (>=5.4)",
    "pydantic (>=1.10.16)",
    "typing-inspect (>=0.9.0)",
    "ujson (>=5.4.0)",
    "deprecation (>=2.1.0)",
    "uuid6 (>=2024.7.10)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "evidently", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pydeps = "^3.0.1"
ipykernel = "^7.0.1"


